.bundle/extensions/x86_64-linux/2.3.0-static/json-1.8.1/gem_make.out
current directory: /home/nitrous/code/Ruumi-Version2/.bundle/gems/json-1.8.1/ext/json/ext/generator
/usr/local/opt/rbenv/versions/2.3.1/bin/ruby -r ./siteconf20160807-16887-4n9i8z.rb extconf.rb
creating Makefile

current directory: /home/nitrous/code/Ruumi-Version2/.bundle/gems/json-1.8.1/ext/json/ext/generator
make "DESTDIR=" clean

current directory: /home/nitrous/code/Ruumi-Version2/.bundle/gems/json-1.8.1/ext/json/ext/generator
make "DESTDIR="
compiling generator.c
In file included from generator.c:1:0:
../fbuffer/fbuffer.h: In function ‘fbuffer_to_s’:
../fbuffer/fbuffer.h:175:47: error: macro "rb_str_new" requires 2 arguments, but only 1 given
     VALUE result = rb_str_new(FBUFFER_PAIR(fb));
                                               ^
../fbuffer/fbuffer.h:175:20: warning: initialization makes integer from pointer without a cast [enabled by default]
     VALUE result = rb_str_new(FBUFFER_PAIR(fb));
                    ^
make: *** [generator.o] Error 1

make failed, exit code 2
